# hum

./: .gitignore  Cargo.toml  MIGRATING.md  Makefile  README.md  VOCABULARY.md  WIRE.md  hum.schema.json  id.ts  install  justfile  log.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: pages.yml  release.yml
clients/go/: README.md  go.mod
clients/python/: README.md
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs
config/: Cargo.toml
config/src/: lib.rs
contracts/: .gitignore  DEPLOYMENTS.md  README.md  foundry.toml
contracts/src/: HumdRegistry.sol  IHumdRegistry.sol
contracts/test/: HumdRegistry.t.sol
drone/: Cargo.toml  README.md  classify.ts  cup.ts  drone.ts  index.ts  llm.ts  prompts.ts
drone/src/: classify.rs  lib.rs
ensemble/: Cargo.toml  README.md
ensemble/src/: gossip.rs  headroom.rs  hives.rs  iroh.rs  kad.rs  lib.rs  nestlings.rs  onchain.rs  tcp.rs  tls.rs  uri.rs
ensemble/tests/: gossip_integration.rs  hives_integration.rs  iroh_integration.rs  kad_integration.rs  nestlings_integration.rs  tcp_integration.rs  tls_integration.rs
fs/: ast.ts  config-ast.ts  config.ts  drift.ts  linguistic.ts  session.ts
fs/drone/: llm.ts  prompts.ts
fs/queries/: bash.scm  cpp.scm  java.scm  js-extra.scm  js-ts-extra.scm  ts-extra.scm  vue.scm
fs/wasm/: tree-sitter-vue.wasm
graft/: Cargo.toml
graft/src/: lib.rs
graft/tests/fixtures/: two_turns.jsonl
hives/: README.md  foragers.md
hives/anthropic-server/: Orchfile  README.md  package.json
hives/bp7/: Cargo.toml  Orchfile  README.md
hives/bp7/src/: main.rs
hives/claude-cli/: Cargo.toml  Orchfile  install
hives/claude-cli/src/: lib.rs  main.rs
hives/claude-repl/: Cargo.toml  Orchfile  install
hives/claude-repl/src/: lib.rs  main.rs
hives/common/: Cargo.toml
hives/common/src/: forager.rs  identity.rs  lib.rs  mcp_bridge.rs  serve.rs
hives/grpc/: Cargo.toml  Orchfile  README.md
hives/grpc/proto/: hum.proto
hives/grpc/src/: main.rs
hives/gsm-modem/: Cargo.toml  Orchfile  README.md
hives/gsm-modem/src/: main.rs
hives/humfs/: Cargo.toml  Orchfile  README.md  install
hives/humfs/src/: dispatch.rs  main.rs
hives/humfs/src/ast/: mod.rs  outline.rs  query.rs  subwalk.rs  symbol.rs
hives/humfs/src/tools/: bash.rs  do_code.rs  do_noncode.rs  mod.rs  read.rs
hives/ollama-server/: Cargo.toml  Orchfile  README.md
hives/openai-server/: Orchfile  README.md  install  package.json  pnpm-lock.yaml
hives/paid-oracle/: Cargo.toml  Orchfile  README.md  install
hives/paid-oracle/buyer/: buy.ts  keygen.ts  package.json
hives/paid-oracle/src/: main.rs
hives/twilio-sms/: Orchfile  README.md  go.mod  main.go
hives/vercel-ai/: Orchfile  README.md  package.json  tsconfig.json  tsup.config.ts
hum/: Cargo.toml
hum-paths/: Cargo.toml
hum-paths/src/: lib.rs
hum/src/: main.rs
humctl/: Cargo.toml
humctl/src/: main.rs
humd/: Cargo.toml  humd.ts
humd-rs/: Cargo.toml  README.md
humd-rs/codegen/src/: main.rs
humd-rs/config/src/: lib.rs
humd-rs/drift/: Cargo.toml
humd-rs/drift/src/: lib.rs
humd-rs/drone/: Cargo.toml
humd-rs/graft/tests/: integration.rs
humd-rs/graft/tests/fixtures/: empty.jsonl  partial_tool_use.jsonl  with_thinking.jsonl
humd-rs/humd-bin/: Cargo.toml
humd-rs/humd-bin/src/: main.rs
humd-rs/ids/: Cargo.toml
humd-rs/ids/src/: lib.rs
humd-rs/mcpd/: Cargo.toml
humd-rs/mcpd/src/: lib.rs  protocol.rs  registry.rs
humd-rs/mcpd/src/tools/: bash.rs  edit.rs  fs_util.rs  grep.rs  mod.rs
humd-rs/nest/src/: lib.rs  pipe.rs  pool.rs  pty.rs
humd-rs/nests/claude-cli/: Cargo.toml
humd-rs/nests/claude-repl/src/: lib.rs
humd-rs/penny/src/: lib.rs
humd-rs/thrum-core/: Cargo.toml
humd-rs/thrum-core/src/: chi.rs  generated.rs  wane.rs
humd-rs/thrumd/: Cargo.toml
humd-rs/thrumd/src/: lib.rs  registry.rs
humd/examples/: smoke.rs
humd/src/: identity.rs  lib.rs  main.rs  peers.rs
humd/tests/: prometheus_endpoint.rs
humnest/: Cargo.toml
humnest/src/: control.rs  lib.rs  log_capture.rs  main.rs  supervisor.rs
hums/: Cargo.toml
hums/src/: lib.rs
mcp/: Cargo.toml  server.ts  tools.ts
mcp/src/: capability.rs  catalogue.rs  lib.rs  protocol.rs  registry.rs  server.rs  session.rs  translate.rs
mcp/src/tools/: glob.rs  read.rs  write.rs
nest/: Cargo.toml  README.md  index.ts  nest.ts  perch.ts  protocol.ts  types.ts
nest/src/: budget.rs  health.rs  lib.rs  lifecycle.rs  limits.rs  metrics.rs  mock.rs  pool.rs
nestlings/: README.md
nestlings/anthropic-server/: README.md  package.json  tsup.config.ts
nestlings/bp7-nestling/: Cargo.toml  README.md
nestlings/bp7-nestling/src/: main.rs
nestlings/grpc/: README.md  build.rs  package.json  tsup.config.ts
nestlings/gsm-modem/: Cargo.toml  README.md
nestlings/ollama-server/: Cargo.toml  README.md
nestlings/openai-server/: README.md  install  package.json  pnpm-lock.yaml
nestlings/opencode/: README.md  compat.ts  index.ts  package.json  provider.ts  tsconfig.json  tsup.config.ts  tui.tsx
penny/: Cargo.toml  index.ts
perches/: README.md
reports/: compat-v0.10.3.md  compat-v0.11.0.md  compat-v0.12.0.md
scenarios/: README.md  co-pilot.md  eggs-on-the-hum.md  federation-handoff.md  overflow-inference.md  partition-and-heal.md  phone-laptop-roam.md
scripts/: migrate-from-0-2.sh  release.sh  svc.sh  update-compat.sh  version.sh
sim/: Cargo.toml
sim/src/: lib.rs
sim/tests/: co_pilot.rs  eggs_on_the_hum.rs  federation_handoff.rs  mock_prompt.rs  overflow_inference.rs  partition_and_heal.rs  phone_laptop_roam.rs  smoke.rs  tool_catalogue.rs  two_humds_ping_pong.rs
site/: README.md  astro.config.mjs  package-lock.json  package.json
tests/: e2e-serve-asks.test.ts  e2e-serve.test.ts  fs.test.ts
thrum/: README.md  WIRE.md  chi.ts  helpers.ts  index.ts  package.json
thrum-core/: Cargo.toml  README.md  build.rs
thrum-core/src/: chi.rs  envelope.rs  lib.rs  prims.rs  wane.rs
thrum-core/tests/: integration.rs
thrumd/: Cargo.toml
thrumd/src/: conn.rs  lib.rs  registry.rs
thrumd/tests/: accept_rate_limit.rs
(+100 files in other folders)
