[workspace]
resolver = "2"
members = [
    "thrum-core",
    "thrumd",
    "hum-paths",
    "ids",
    "config",
    "codegen",
    "drift",
    "humd",
    "hum",
    "mcp",
    "nest",
    "hives/common",
    "hives/claude-cli",
    "hives/claude-repl",
    "hives/humfs",
    "hums",
    "drone",
    "penny",
    "ensemble",
    "sim",
    "hives/grpc",
    "hives/paid-oracle",
    "hives/gsm-modem",
    "hives/ollama-server",
    "hives/bp7",
]

[workspace.package]
version = "0.31.18"
edition = "2021"
license = "MIT"
repository = "https://github.com/adiled/hum"
homepage = "https://adiled.github.io/hum/"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
rand = "0.8"
hex = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
directories = "5"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
regex = "1"
