[package]
name = "codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mirror chi.ts → Rust. Tiny CLI: read the TS, emit the enum + THRUM_VERSION."

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
regex = { workspace = true }
anyhow = { workspace = true }
