[package]
name = "codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generate consumer-side chi registries from the Rust source of truth (thrum-core). Today: emit thrum/generated.ts. Tomorrow: proto, JSON Schema, …"

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
thrum-core = { path = "../thrum-core" }
strum = "0.26"
anyhow = { workspace = true }
