[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hum.json loader — XDG-located, best-effort, defaults fill missing fields."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
jsonschema = "0.46.5"
