[package]
name = "ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hum ensemble — the mesh of humds. Peer identity, transport trait, in-process simulator transport, peer registry + routing."

[dependencies]
thrum-core = { path = "../thrum-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
