[package]
name = "ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hum ensemble — the mesh of humds. Peer identity, transport trait, in-process simulator transport, peer registry + routing."

[dependencies]
thrum-core = { path = "../thrum-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
# T3 transport: iroh QUIC + Noise + NAT hole-punching. v0 scaffold —
# IrohEndpoint accepts a pre-built iroh::Endpoint; identity unification
# with HumdKey is a follow-up.
iroh = "1.0.0-rc.0"
