[package]
name = "ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hum ensemble — the mesh of humds. Peer identity, transport trait, in-process simulator transport, peer registry + routing."

[dependencies]
thrum-core = { path = "../thrum-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
# T3 transport: iroh QUIC + TLS + NAT hole-punching. IrohEndpoint /
# IrohTransport plug into the Transport + PeerConnection traits. ALPN
# is bound to `hum/<major>.<minor>` so wire-protocol bumps surface as
# clean handshake rejections instead of silent corruption.
iroh = "1.0.0-rc.0"
# T2 transport: TLS-over-TCP with self-signed certs pinned by SHA-256
# fingerprint. TlsTcpEndpoint / TlsTcpTransport mirror the plaintext
# TcpEndpoint shape but wrap the stream in a tokio_rustls::TlsStream.
# No CA, no chain — peers trust because they configured the fingerprint.
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
# Bounded seen-set for the gossip fan-out layer. See gossip.rs header
# for the choice rationale (homegrown vs libp2p-gossipsub).
lru = "0.12"

[dev-dependencies]
# Self-signed cert generation for the TLS integration test. Pinned to
# 0.13 — its CertifiedKey -> rustls type conversion matches what
# rustls 0.23 expects (CertificateDer / PrivateKeyDer).
rcgen = "0.13"
