[package]
name = "graft"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSONL stitching for Claude CLI transcripts: graft, sanitize, prune, last-uuid."

[dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
