[package]
name = "humctl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "humctl — tiny wrapper around the service-manager crate. Installs / runs the two hum daemons (humd, humnest) as user services on systemd or launchd."

[[bin]]
name = "humctl"
path = "src/main.rs"

[dependencies]
service-manager = "0.7"
anyhow = { workspace = true }
