[package]
name = "humd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "humd — the hum daemon. Library face (`humd::run`) for tests + simulators; binary `humd` for production."

[lib]
path = "src/lib.rs"

[[bin]]
name = "humd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Path deps on every workspace crate.
thrum-core = { path = "../thrum-core" }
thrumd = { path = "../thrumd" }
mcp = { path = "../mcp" }
config = { path = "../config" }
ids = { path = "../ids" }
graft = { path = "../graft" }
drift = { path = "../drift" }
nest = { path = "../nest" }
claude-cli = { path = "../nests/claude-cli" }
claude-repl = { path = "../nests/claude-repl" }
hums = { path = "../hums" }
penny = { path = "../penny" }
drone = { path = "../drone" }
ensemble = { path = "../ensemble" }
serde_json = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "smoke"
path = "examples/smoke.rs"
