[package]
name = "humd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "humd — the hum daemon. Library face (`humd::run`) for tests + simulators; binary `humd` for production."

[lib]
path = "src/lib.rs"

[[bin]]
name = "humd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Path deps on every workspace crate.
thrum-core = { path = "../thrum-core" }
thrumd = { path = "../thrumd" }
mcp = { path = "../mcp" }
config = { path = "../config" }
ids = { path = "../ids" }
drift = { path = "../drift" }
nest = { path = "../nest" }
claude-cli = { path = "../nests/claude-cli" }
claude-repl = { path = "../nests/claude-repl" }
hums = { path = "../hums" }
penny = { path = "../penny" }
drone = { path = "../drone" }
ensemble = { path = "../ensemble" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"

[[example]]
name = "smoke"
path = "examples/smoke.rs"
