[package]
name = "hums"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hum state persistence — registry of sessions, atomic JSON load/save under XDG_STATE_HOME."

[dependencies]
hum-paths = { path = "../hum-paths" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"
tracing = { workspace = true }
