[package]
name = "mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP ↔ thrum translation helpers. Pure library: JSON-RPC envelope types, ToolDef/ToolResult shapes, capability table, tone↔request mapping. Worker bees compose these to spawn their own MCP servers."

[dependencies]
thrum-core = { path = "../thrum-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
