[package]
name = "nest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude subprocess pool. Two perches: pipe (claude -p stream-json) and PTY. The daemon talks JSON to roosts via this crate."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
portable-pty = "0.9"
