[package]
name = "nest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM subprocess pool. Defines WorkerBee + ForagerBee traits, Roost runtime, and the Nest. humd talks JSON to roosts via this crate."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
portable-pty = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
