[package]
name = "penny"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hum lifetime counters: increment-only, JSON-persisted, merge-friendly."

[dependencies]
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
