[package]
name = "sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hum ensemble simulator — spin up N humds in-process, wire them, run narrative tests."

[dependencies]
ensemble = { path = "../ensemble" }
humd = { path = "../humd" }
thrum-core = { path = "../thrum-core" }
thrumd = { path = "../thrumd" }
nest = { path = "../nest" }
config = { path = "../config" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
