[package]
name = "thrum-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Wire-protocol types and primitives for the thrum (NDJSON socket between humd and bees)."
readme = "README.md"
keywords = ["thrum", "hum", "p2p", "agents", "ndjson"]
categories = ["network-programming", "encoding"]
build = "build.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
codegen = { path = "../codegen" }

[dev-dependencies]
serde_json = { workspace = true }
