[package]
name = "bp7"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RFC 9171 Bundle Protocol v7 forager hive — interplanetary store-and-forward bridge to hum."

[dependencies]
thrum-core = { path = "../../thrum-core" }
nest-common = { path = "../common" }
ensemble = { path = "../../ensemble" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bundle-protocol = { package = "bp7", version = "0.10" }
libc = "0.2"

[[bin]]
name = "bp7-forager"
path = "src/main.rs"
