[package]
name = "claude-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concrete WorkerBee impl: `claude -p` over a pipe. Builds the CLI command line from a high-level SpawnSpec, parses stream-json stdout."

[[bin]]
name = "claude-cli-worker"
path = "src/main.rs"

[dependencies]
hum-paths = { path = "../../hum-paths" }
nest = { path = "../../nest" }
nest-common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
command-group = { version = "5", features = ["with-tokio"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
