[package]
name = "claude-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concrete WorkerBee impl: interactive `claude` over a PTY. v0 stub — no classifier."

[[bin]]
name = "claude-repl-worker"
path = "src/main.rs"

[dependencies]
hum-paths = { path = "../../hum-paths" }
nest = { path = "../../nest" }
nest-common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.9"
