[package]
name = "nest-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared building blocks for nests — regex Classifier for the drone's context-loss heuristic, common spawn glue."

[dependencies]
drone = { path = "../../drone" }
ensemble = { path = "../../ensemble" }
nest = { path = "../../nest" }
thrum-core = { path = "../../thrum-core" }
async-trait = "0.1"
ed25519-dalek = "2"
rand = "0.8"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros", "rt", "rt-multi-thread", "time"] }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
