[package]
name = "grpc-forager"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC bridge to hum — bidi stream, every chi flows through; transport-only bee."

[dependencies]
thrum-core = { path = "../../thrum-core" }
nest-common = { path = "../common" }
ensemble = { path = "../../ensemble" }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = "0.3"
hum-paths = { path = "../../hum-paths" }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "grpc-forager"
path = "src/main.rs"
