[package]
name = "paid-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "x402-style paid oracle bee — sells one price per USDC payment, verified on-chain."

[dependencies]
thrum-core = { path = "../../thrum-core" }
nest-common = { path = "../common" }
ensemble = { path = "../../ensemble" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
hex = { workspace = true }
hum-paths = { path = "../../hum-paths" }

[[bin]]
name = "paid-oracle"
path = "src/main.rs"
