[package]
name = "drift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-hum timing rings: marks, spans, flags, and thrum samples with p50/p95 aggregation and daily NDJSON persistence."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
