[package]
name = "bp7-nestling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RFC 9171 Bundle Protocol v7 nestling — interplanetary store-and-forward bridge to hum."

[dependencies]
thrum-core = { path = "../../thrum-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bp7 = "0.10"
libc = "0.2"

[[bin]]
name = "bp7-nestling"
path = "src/main.rs"
